syntax = "proto3";
package prover;

service RlnProver {
  rpc SendTransaction (SendTransactionRequest) returns (SendTransactionReply);
  // Server side streaming RPC: 1 request -> X responses (stream)
  rpc GetProofs(RlnProofFilter) returns (stream RlnProof);
}

message SendTransactionRequest {
  string sender = 1;
  string tx_id = 2;
}

message SendTransactionReply {
  bool result = 1;
  string message = 2;
}

message RlnProofFilter {
  optional string address = 1;
}

message RlnProof {
  string sender = 1;
  string id_commitment = 2;
  string proof = 3;
}

